$Id$

2014-10-07  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Added more attributes for SanDisk based SSDs based on SSD
	Dashboard tool data (#463)

2014-10-06  Christian Franke  <franke@computer.org>

	ataprint.cpp: Add form factors from ACS-4.
	Add ACS-2 and ACS-3 minor versions.
	Update SATA log names.  Add SATA 3.2.
	Avoid crash on device statistics page 0xff if SMART READ LOG is used.
	Print vendor specific bytes from SCT Status.
	atacmds.cpp, atacmds.h, ataprint.cpp: Print SMART STATUS info
	from SCT Status.

2014-10-06  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Exteneded regexp for SanDisk X300s (#463)

2014-09-29  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Added Seagate Backup Plus Slim Portable USB 3.0 drive

2014-08-29  Christian Franke  <franke@computer.org>

	drivedb.h: Fix regex syntax error (regression from r3988).

2014-08-22  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h:
	- fixed SanDisk X210 regular expression

2014-08-21  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h:
	- added SanDisk X300s SSD
	- extended Apacer SSD support based on APSDM004G13AN-AT user report

2014-08-16  Alex Samorukov  <samm@os2.kiev.ua>

	ataprint.cpp: '-l devstat' - workaround for buggy firmware by provided
	Christian Franke

2014-08-15  Alex Samorukov  <samm@os2.kiev.ua>

	ataprint.cpp: device statistic - use smart log if GP log is not available

2014-08-15  Alex Samorukov  <samm@os2.kiev.ua>

	os_darwin.cpp:
	- Migrated to the new interface
	- Added multisector support
	- Fixed smart autosave processing

2014-07-26  Christian Franke  <franke@computer.org>

	smartmontools 6.3

2014-07-25  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Apple SD/SM/TS...E/F SSDs: Rename, add TS*[EF]
	- JMicron based SSDs: Fix regex for Apple TS*C
	- Marvell based SanDisk SSDs: X210

2014-07-25  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Apple SM* SSD - add attribute 173 description (guessed)

2014-07-23  Christian Franke  <franke@computer.org>
