@@ -1,5 +1,14 @@
 $Id$
 
+2014-11-09  Roger Willcocks  <roger@filmlight.ltd.uk>
+
+	os_linux.cpp: linux_aacraid_device: Fix ioctl data count
+	if dxfer_len == 0.  Return scsi sense data.  Together these
+	allow the SMART STATUS command to operate correctly.
+	Improve SRB status checks.
+	linux_ata_device: Fix very old bug in the error handling
+	of HDIO_DRIVE_TASKFILE.
+
 2014-10-07  Alex Samorukov  <samm@os2.kiev.ua>
 
 	drivedb.h: Added more attributes for SanDisk based SSDs based on SSD
